# JoNet

./: .gitignore  CMakeLists.txt  README.md
include/: JoNet.h  pch.h
include/Core/: Core.h  Log.h  Network.h  Tensor.h
include/Layers/: Layer.h  LayerType.h
include/Optimizers/: Optimizer.h  OptimizerType.h
sandbox/: CMakeLists.txt  main.cpp
src/Core/: Log.cpp
